NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

V0.80 - soon
- NEW : Progress bar for resize, watermark and thumbnail operation
- NEW : Show Meta data information
- NEW : Cache option for SinglePic
- Changed : Moved several functions into nggAdmin Class (functions.php)
- Changed : Update to jQuery V1.1.4 (v1.2.1 causes problems with interface.js)
- Changed : Hide used galleries in album admin page 
- Changed : Remove float in singlepic code and added class ngg-left , ngg-right (THX to Nathan Sylvain)
- Changed : Edit style setting (added new class .desc , THX to Sebastian) 
- Changed : Check for galleryfolder instead name (THX to Luke Poland)
- Changed : Delete images per default
- Changed : Change CSS (ngg-album-compact) , remove width & height setting from code
- Bugfix : Change Album CSS (THX to Thomas-DK)
- Bugfix : Watermark for GIF not correct supported
- Bugfix : Missing wp_nonce at setup page
- Bugfix : Add DIV in Slideshow link (for Safari)
- Added : Updated to Pclzip.lib.php v2.6
- Added : CSS ID field for gallery & images
- Added : WPMU : New site admin page (wpmu.php)
- Added : WPMU : Integrated quota check
- Added : WPMU : No update check
- Added : WPMU : Remove edit style (THX to Kristin)
- Added : WPMU : Remove uninstall button
- Added : WPMU : Remove server settings
- Added : WPMU : Gallery path set to blog.dir
- Added : Support for WPMU

V0.74 - 01.12.2007
- NEW : Added meta reader class, first step to integrated meta data import

V0.73 - 20.10.2007
- Added : Support for Shutter Reloaded
- Update to jQuery Tabs 2.7.4
- Changed : Remove $_SERVER['REQUEST_URI'] for IIS compatibility
- Bugfix : Option Sildeshow didn't jump to overview

V0.72 - 13.09.2007
- Added : Missing overflow:hidden in ngg-album.css
- Added : New experimental stylesheet hovereffect.css
- Changed : Better check for memory limit in zip-files
- Bugfix : Missing stripslashes for alttext (THX to Lawrence)
- Bugfix : Navigation didn't highlight page 1 (THX to Brot)